Fixed accordios header on safari

--- a/src/sass/Accordion.scss
+++ b/src/sass/Accordion.scss
@@ -29,16 +29,8 @@
 .acc-header {
   padding: 15px 0 0 0;
   border-bottom: 1px solid rgb(224, 224, 224);
-  button {
-    width: 100%;
-    background: transparent !important;
-    display: flex !important;
-    flex-direction: row-reverse;
-    justify-content: flex-end;
-    align-items: center;
-  }
   .material-icons {
-    flex: 0 1 30px;
+    width: 24px;
   }
 }
 
@@ -95,23 +87,6 @@
           }
         }
       }
-    }
-  }
-
-  .acc-header {
-    // @extend .h6;
-    padding: 16px 0 0 0;
-    border-bottom: 1px solid rgb(224, 224, 224);
-    button {
-      width: 100%;
-      background: transparent !important;
-      display: flex !important;
-      flex-direction: row-reverse;
-      justify-content: flex-end;
-      align-items: center;
-    }
-    .material-icons {
-      flex: 0 1 30px;
     }
   }
 
